Adds support for simple apikey authentication
